[package]
authors = ["pierzchalski <edward@pierzchalski.org>"]
name = "macro_analysis"
version = "0.1.0"

[dependencies]
glob = "0.2.11"
libflate = "0.1.14"
quicli = "0.2.0"
reqwest = "0.8.4"
serde_json = "1.0.9"
tar = "0.4.14"
regex = "0.2.6"
quote = "0.4.2"

[dependencies.syn]
features = ["derive", "full", "visit", "extra-traits"]
version = "0.12.12"
